# Django_PRO_TNB

./: .gitignore  README.md
core_auth/: .flake8  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
core_auth/core/general/utils/: collections.py  misc.py  settings.py
core_auth/core/project/: settings.py  urls.py
core_auth/core/project/settings/: __init__.py  base.py  custom.py  docker.py  envvars.py
core_auth/core/project/settings/templates/: settings.dev.py
core_auth/local/: settings.dev.py  settings.prod.py
core_auth/scripts/: production_data.py
