[tool.poetry]
name = "diag-sys-auth"
version = "0.1.0"
description = ""
authors = ["Dennis <dennis.arcelopez@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "diag_sys_auth"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
djangorestframework = "^3.14.0"
django-split-settings = "^1.2.0"
pyyaml = "^6.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
